7.1.2
 - Document build in `BUILDING-configure.md` / `BUILDING-cmake.md`.
 - Work around silly clang warning in `test_errorhandler.cxx`.
 - Fix install error with some internal headers. (#322)
 - Fix "No object selected" error message in large objects.  (#324)
7.1.1
 - Compile fix for Visual Studio.
 - Warning fix for clang.
 - Also install `transaction_focus.hxx`. (#320)
7.1.0
 - Query tuples straight into `std::tuple` using `transaction::stream()`!
 - And, `stream_from` now supports more or less arbitrary queries.
 - Instead of a tuple of fields, you can pass `stream_to` a container as well.
 - `string_traits::size_buffer()` must now be `noexcept`.
 - New `nullness` member: `always_null`.
 - There is now `to_buf` support for string literals.
 - Streaming data is now more efficient.
 - The table name in `stream_from` is now escaped.
 - You can now "convert" strings to `std::string_view`.  Mind your lifetimes!
 - A `std::variant` will now convert to string, if its member types do.
 - If a `stream_from` row fails to convert, you can no longer retry it.
 - `from_string(field const &)` now handles null values properly.
 - Obsolete Windows build docs are gone.
 - Added `row::to(std::tuple<...>)`.
 - Unified the test suites.  We no longer need `test/unit/unit_runner`.
 - New helper: `strip_t<...>` to remove a type's constness and reference.
 - Replace custom templating with CMake glob in `src/CMakeLists.txt`.
 - Replace custom templating with CMake glob in `doc/CMakeLists.txt`.
 - Replace custom templating with CMake glob in `test/unit/CMakeLists.txt`.
7.0.8
 - Inline `type_name` in `PQXX_DECLARE_ENUM_CONVERSION`.
7.0.7
 - Fix broken `--with-postgres-lib` option in `configure` script (#311)
 - Should now build even if neither `pkg-config` nor `pg_config` is available.
 - CMake accepts `PostgreSQL_ROOT`, if it's a sufficiently recent version.
7.0.6
 - Prefer `pg_config` over `pkg-config` for include path (#291).