@@ -3,6 +3,7 @@
  - Work around silly clang warning in `test_errorhandler.cxx`.
  - Fix install error with some internal headers. (#322)
  - Fix "No object selected" error message in large objects.  (#324)
+ - If error has no SQLSTATE, throw `broken_connection`. (#280)
 7.1.1
  - Compile fix for Visual Studio.
  - Warning fix for clang.
